--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -7,5 +7,5 @@ $colors: (
 );
 
 @function color($color_name) {
-  @return map-get($colors, $color_name)
-};
+  @return map-get($colors, $color_name);
+}
